@@ -1,3 +1,8 @@
+2005-03-28  Tom Tromey  <tromey@redhat.com>
+
+	* lower.cc (visit_bytecode_block): Set DECL_CONTEXT on stack and
+	local variables.  Correctly set local_slots[] elements.
+
 2005-03-27  Tom Tromey  <tromey@redhat.com>
 
 	* lower.cc (visit_bytecode_block): Use type_object_ptr.
